# at_cascade

./: .gitignore  .readthedocs.yaml  :wq  CITATION.cff  CMakeLists.txt  aspell.pws  at_cascade.xrst  batch_edit.sed  doc.xrst  doc.xsrst  faq.xrst  index.html  plan.xsrst  pyproject.toml  readme.md  readme.rst  setup.cfg  typos.toml  wishlist_swh_gc.xrst  xrst.toml
at_cascade/: __init__.py  add_log_entry.py  all_node_database.py  avgint_parent_grid.py  bilinear.py  cascade_fit_node.py  cascade_root_node.py  check_cascade_fit.py  check_cascade_node.py  check_log.py  child_avgint_table.py  clear_shared.py  com_cov_reference.py  continue_cascade.py  copy_other_tbl.py  copy_root_db.py  create_all_node_db.py  create_child_avgint.py  create_child_node_db.py  create_job_table.py  create_shift_db.py  create_subset_db.py  csv_fit.py  csv_interface.py  csv_interface.rst  csv_interface.xrst  csv_simulate.py  data4cov_reference.py  data_include.py  empty_avgint_table.py  empty_directory.py  extract_avgint.py  fit_one_job.py  fit_one_process.py  fit_or_root.py  fit_or_root_class.py  fit_parallel.py  get_cov_info.py  get_cov_reference.py  get_database_dir.py  (+24 more)
at_cascade/csv/: __init__.py  ancestor_fit.py  check_table.py  covariate_avg.py  covariate_both.py  covariate_same.py  covariate_spline.py  empty_str.py  fit.py  get_header.py  interface.py  join_file.py  pre_one_job.py  pre_one_process.py  pre_parallel.py  pre_user.py  pre_user_csv.py  predict.py  predict_one.py  predict_prior.py  read_table.py  same_covariate.py  set_truth.py  simulate.py  write_table.py
at_cascade/ihme/: __init__.py  get_age_group_id_dict.py  get_age_group_id_table.py  get_interpolate_covariate.py  get_table_csv.py  ihme_csv.py  main.py  predict.py  predict_csv.py  summary.py  write_all_node_database.py  write_all_option_table.py  write_csv.py  write_data_csv.py  write_data_table.py  write_mtall_tables.py  write_mulcov_freeze_table.py  write_node_csv.py  write_node_split_table.py  write_node_table.py  write_root_node_database.py
doc/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_sources/xsrst/: 2020.rst.txt  2021.rst.txt  2022.rst.txt  absolute_covariates.rst.txt  absolute_covariates_py.rst.txt  add_log_entry.rst.txt  all_cov_reference_table.rst.txt  all_mtall.rst.txt  all_mtspecific.rst.txt  all_node_database.rst.txt  all_node_db.rst.txt  all_option_table.rst.txt  at_cascade.rst.txt  avgint_parent_grid.rst.txt  cascade_fit_node.rst.txt  cascade_root_node.rst.txt  check_cascade_fit.rst.txt  check_cascade_node.rst.txt  check_log.rst.txt  child_avgint_table.rst.txt  clear_shared.rst.txt  continue_cascade.rst.txt  continue_cascade_py.rst.txt  continue_cascade_xam.rst.txt  covariate_reference_table.rst.txt  create_all_node_db.rst.txt  create_child_avgint.rst.txt  create_child_node_db.rst.txt  create_job_table.rst.txt  create_shift_db.rst.txt  data4cov_reference.rst.txt  empty_avgint_table.rst.txt  example.rst.txt  fit_goal_table.rst.txt  get_cov_info.rst.txt  get_cov_reference.rst.txt  get_database_dir.rst.txt  get_fit_children.rst.txt  (+44 more)
doc/xsrst/: 2020.html  2021.html  2022.html  absolute_covariates.html  absolute_covariates_py.html  add_log_entry.html  all_cov_reference_table.html  all_mtall.html  all_mtspecific.html  all_node_database.html  all_node_db.html  all_option_table.html  at_cascade.html  avgint_parent_grid.html  cascade_fit_node.html  cascade_root_node.html  check_cascade_fit.html  check_cascade_node.html  check_log.html  child_avgint_table.html  clear_shared.html  continue_cascade.html  continue_cascade_py.html  continue_cascade_xam.html  covariate_reference_table.html  create_all_node_db.html  create_child_avgint.html  create_child_node_db.html  create_job_table.html  create_shift_db.html  data4cov_reference.html  empty_avgint_table.html  example.html  fit_goal_table.html  get_cov_info.html  get_cov_reference.html  get_database_dir.html  get_fit_children.html  get_fit_integrand.html  get_parent_node.html  (+42 more)
example/: absolute_covariates.py  bilinear.py  continue_cascade.py  csv_table.py  example.xrst  example.xsrst  iota_and_chi.py  level2_leaf4.py  max_fit_option.py  mulcov_freeze.py  no_ode_xam.py  one_at_function.py  prevalence2iota.py  relrisk.py  remission.py  simple_ode.py  split_covariate.py  split_list.py
example/csv/: absolute_covariate.py  ancestor_fail.py  binomial.py  break_fit_pred.py  cov_both_xam.py  cov_same_xam.py  cov_shock.py  coverage.py  csv_table.py  dage_prior.py  diphtheria.py  fit_xam.py  freeze_posterior.py  join_file_xam.py  no_data.py  population.py  predict_descend.py  predict_xam.py  prevalence.py  prevalence2iota.py  prior_pred.py  root_node_sex.py  same_cov_xam.py  shock_cov.py  sim_and_fit.py  sim_fit_pred.py  simulate.py  simulate_xam.py  simulate_xam_r.r  start_node_sex.py
sphinx/: conf.py  index.rst  keyword  preamble.rst  spelling
test/: avgint_parent_grid.py  child_avgint_table.py  continue_cascade.py  copy_other_tbl.py  create_child_avgint.py  create_job_table.py  csv_drill.py  csv_fit.py  csv_max_fit.py  csv_no_sample.py  csv_one_cov.py  csv_sample_fail.py  csv_sim_2.py  csv_simulate.py  data4cov_reference.py  dict_order.py  diff_prior.py  get_cov_reference.py  get_database_dir.py  get_database_name.py  get_fit_children.py  get_fit_integrand.py  get_job_table.py  mulcov_freeze.py  multi_process.py  no_child_data.py  no_ode_fit.py  no_ode_ignore.py  omega_constraint.py  one_cov.py  recover_fit.py  split_covariate.py  split_covriate.py  table_exists.py
test/csv/: check_log.py  drill.py  fit.py  freeze_posterior.py  max_fit.py  max_fit_parent.py  mulcov_freeze.py  number_sample_predict.py  one_cov.py  perturb.py  rcond_lower.py  sample_fail.py  sim_1.py  sim_2.py  zero_meas_value.py
xrst/: all_node_db.xrst  bib.xrst  faq.xrst  fit_info.xrst  glossary.xrst  math.xrst  release_notes.xrst  wish_list.xrst
xrst/whats_new/: 2012.xrst  2021.xrst  2022.xrst  2023.xrst  2024.xrst  2025.xrst  2026.xrst
xsrst/: all_node_db.xsrst  database.xsrst  glossary.xsrst  plan.xsrst  release_notes.xsrst  wish_list.xsrst
