# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: University of Washington <https://www.washington.edu>
# SPDX-FileContributor: 2021-25 Bradley M. Bell
# ----------------------------------------------------------------------------
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
#
[project]
#
# Basic Information
name              = 'at_cascade'
version           = '2025.0.2'
#
# Dependencies and reqirements
requires-python   = '>=3.8'
dependencies      = [
  'dismod_at',
  'numpy',
  'scipy',
]
#
# Creating executable scipts
# None
#
# About this project
description   = 'Cascading dismod_at from parent to child regions'
# readme      = readme.rst # 2DO
license       = 'AGPL-3.0-or-later'
license-files = [ 'agpl-3.0.txt' ]
authors       = [
  {name  = 'Bradley M. Bell', email = 'bradbell@seanet.com'},
]
maintainers   = [
  {name  = 'Bradley M. Bell', email = 'bradbell@seanet.com'},
]
keywords      = [ 'public health', 'disease modeling', 'dismod_at' ]
classifiers   = [ # see https://pypi.org/classifiers/
   'Programming Language :: Python :: 3',
   'Operating System :: OS Independent',
]
#
# urls
[project.urls]
Documentation  = 'https://at-cascade.readthedocs.io'
Homepage       = 'https://at-cascade.readthedocs.io'
Changelog      = 'https://at-cascade.readthedocs.io/latest/release_notes.html'
Repository     = 'https://github.com/bradbell/at_cascade'
Issues         = 'https://github.com/bradbell/at_cascade/issues'
#
# ----------------------------------------------------------------------------
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.sdist]
include = [
  "at_cascade/*.py",
  "at_cascade/csv/*.py",
]
