#  --------------------------------------------------------------------------
# at_cascade: Cascading Dismod_at Analysis From Parent To Child Regions
#           Copyright (C) 2014-22 University of Washington
#              (Bradley M. Bell bradbell@uw.edu)
#
# This program is distributed under the terms of the
#        GNU Affero General Public License version 3.0 or later
# see http://www.gnu.org/licenses/agpl.txt
# ---------------------------------------------------------------------------
#
[metadata]
name         = at_cascade
version      = 2022.4.18
description  = Cascading Dismod_at Analysis From Parent To Child Regions
author       = Bradley M. Bell
author_email = bradbell@uw.edu
license      = GNU Affero General Public License version 3.0 or later
url          = https://github.com/bradbell/at_cascade
classifiers  =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero

[options]
package_dir =
    at_cascade = at_cascade
packages =
    at_cascade
    at_cascade.ihme
