# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: University of Washington <https://www.washington.edu>
# SPDX-FileContributor: 2021-22 Bradley M. Bell
# ----------------------------------------------------------------------------
#
[metadata]
name         = at_cascade
version      = 2022.4.18
description  = Cascading Dismod_at Analysis From Parent To Child Regions
author       = Bradley M. Bell
author_email = bradbell@uw.edu
license      = GNU Affero General Public License version 3.0 or later
url          = https://github.com/bradbell/at_cascade
classifiers  =
   Programming Language :: Python :: 3
   License :: OSI Approved :: GNU Affero

[options]
package_dir =
   at_cascade = at_cascade
packages =
   at_cascade
   at_cascade.ihme
